# modules/jet-process/jet-process-rs/jet-process-rs-api/src/main/java/jet/process/rs/resource/v1_0/ReceiptRsModelResource.java
@@ -43,15 +43,7 @@ public interface ReceiptRsModelResource {
 		return FactoryHolder.factory.create();
 	}
 
-	public Page<ReceiptRsModel> createReceipt(
-			Integer groupId, Integer typeId, Integer tempfileEntryId,
-			Integer deliveryModeId, String receivedOn, String letterDate,
-			String referenceNumber, String modeNumber,
-			Integer receiptCategoryId, Integer receiptSubCategoryId,
-			String subject, String remarks, String name, String designation,
-			String mobile, String email, String address, Integer countryId,
-			Integer stateId, String pinCode, Integer organizationId,
-			Integer subOrganizationId, String city, Integer userPostId)
+	public Page<ReceiptRsModel> createReceipt(ReceiptRsModel receiptRsModel)
 		throws Exception;
 
 	public default void setContextAcceptLanguage(
